<resources>
    <string name="app_name">Kala</string>
    <string name="title_home">Αρχική</string>
    <string name="title_dashboard">Σύνοψη</string>
    <string name="title_notifications">Ειδοποιήσεις</string>
    <string name="title_social">Κοινωνικά Δίκτυα</string>

    <string name="title_new_task">Δημιουργία</string>

    <string name="AllTasks">Εργασίες</string>
    <string name="Categorized">Κατηγορίες</string>
    <string name="Starred">Επιλεγμένα</string>
    <string name="Overview">Σύνοψη</string>
    <string name="Graphs">Γραφήματα</string>
    <string name="YourFriends">Φίλοι</string>
    <string name="Recommended">Προτεινόμενα</string>

    <string name="btnAdd_text">Προσθήκη</string>

</resources>