<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/cardview_dark_background">

    <include
        android:id="@+id/Top_bar"
        layout="@layout/top_bar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAllTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/AllTasks"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/btnCategorized"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Top_bar" />

    <Button
        android:id="@+id/btnCategorized"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="@string/Categorized"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/btnStarred"
        app:layout_constraintStart_toEndOf="@+id/btnAllTasks"
        app:layout_constraintTop_toBottomOf="@+id/Top_bar" />

    <Button
        android:id="@+id/btnStarred"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="@string/Starred"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCategorized"
        app:layout_constraintTop_toBottomOf="@+id/Top_bar" />

    <LinearLayout
        android:id="@+id/main_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/btnCategorized">

        <LinearLayout
            android:id="@+id/layout_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <android.widget.Button
            android:id="@+id/btnAddTask"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="72dp"
            android:background="@drawable/round_grey"
            android:drawableRight="@drawable/ic_baseline_add_24"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnAdd_text"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>